Avoid container overflow in img

--- a/theme/book/book.css
+++ b/theme/book/book.css
@@ -539,6 +539,7 @@ a {
   display: block;
   margin: 1em auto;
   max-width: 100%;
+  width: 100%; /* o max-width pode ser sobreescrito via style */
 }
 
 .tubaina blockquote {
